# proteus

./: .coderabbit.yaml  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DATA_LICENSE.md  LICENSE  NOTICE  README.md  firstgoal.md  hatch_build.py  project.md  pyproject.toml  render.yaml  tailwind.config.js
.claude/: launch.json
.github/actions/setup-python-env/: action.yml
.github/workflows/: ci.yml
data/evaluation/hard_queries/: README.md  public_seed_cases.yaml
data/languages/ancient_greek/corpus_sources/: perseus_scaife_sources.yaml
data/languages/ancient_greek/lexicon/: greek_lemmas.schema.json  pos_overrides.yaml  supplemental_lemmas.yaml
data/languages/ancient_greek/matrices/: attic_doric.json
data/languages/ancient_greek/orthography/: orthographic_correspondences.yaml
data/languages/ancient_greek/rules/: consonant_changes.yaml  morphophonemic_alternations.yaml  vowel_shifts.yaml
data/lexicon/: greek_lemmas.json  greek_lemmas.schema.json
data/matrices/: attic_doric.json
data/rules/ancient_greek/: consonant_changes.yaml  morphophonemic_alternations.yaml  vowel_shifts.yaml
data/rules/ancient_greek/buck/: dialects.yaml  glossary.yaml  grammar_rules.yaml
data/schemas/: buck_dialects.schema.json  buck_glossary.schema.json  buck_grammar_rules.schema.json  corpus_source_reference.schema.json  hard_query_case.schema.json  phonology_rule_file.schema.json
docs/: API.md  ARCHITECTURE.md  CORPUS_ADAPTERS.md  MCP.md  MIGRATION_CORE_LANGUAGE_DECOUPLING.md  OPEN_CORE_STRATEGY.md  ROADMAP.md  VALIDATION.md  hard_query_collection_template.md  lexicon_schema_migration.md  orthographic_notes_citation_ready_plan.md  orthographic_notes_review_template.md  phase0_phase1_completion_plan.md  phonology_rules.md  project.md  refactor_language_profiles_plan.md  requirements.md  review_followup_medium.md
docs/CODEMAPS/: INDEX.md  api.md  mcp.md  phonology.md  tests.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/api/: openapi.json
docs/mcp/: example-claude-desktop.json  tools.json
scripts/: _cli_utils.py  build-css.sh  build_log_odds_matrix.py  export_mcp_schema.py  export_openapi.py  extract-lsj.sh  extract_epidoc_choices.py
src/api/: _app_version.py  _assets.py  _buck_annotations.py  _buck_conversion.py  _buck_routes.py  _constants.py  _dependencies.py  _hit_formatting.py  _models.py  _request_context.py  _response_meta.py  _runtime_metadata.py  _search_runner.py  conversion.py  main.py
src/mcp_server/: __init__.py  _search_adapter.py  server.py
src/mcp_server/tools/: __init__.py  buck.py  search.py
src/phonology/: _explainer_context.py  _explainer_prose.py  _explainer_rule_loader.py  _explainer_rule_match.py  _explainer_rule_paths.py  _explainer_rule_tokenize.py  _explainer_types.py  _paths.py  _phones.py  _trusted_paths.py  betacode.py  buck.py  build_lexicon.py  distance.py  explainer.py  ipa_converter.py  log_odds.py  lsj_extractor.py  matrix_generator.py  orthography_notes.py  profiles.py  search.py  transliterate.py
src/phonology/core/: __init__.py  ipa.py
src/phonology/core/ports/: __init__.py  orthography_notes.py  profiles.py  trusted_matrices.py
src/phonology/corpus/: __init__.py  _adapters.py  _models.py
src/phonology/explain/: __init__.py  _context.py  _prose.py  _rule_loader.py  _rule_match.py  _rule_paths.py  _rule_tokenize.py  _types.py
src/phonology/languages/: __init__.py
src/phonology/languages/ancient_greek/: __init__.py  betacode.py  (+10 more)
src/phonology/lsj/: __init__.py  _document.py  _extract.py  _fields.py  _heading.py  _intro.py  _normalize.py  _xml.py  _xml_iter.py
src/phonology/search/: __init__.py  _annotation.py  _constants.py  _debug_logging.py  _dedup.py  _dependencies.py  _filtering.py  _indexing.py  _lookup.py  _orchestration.py  _overlap.py  _partial.py  _quality.py  _query.py  _registry.py  _scoring.py  _selection.py  _tokenization.py  _types.py  compat.py
src/proteus/api/: main.py
src/proteus/phonology/: _phones.py  distance.py  explainer.py  ipa_converter.py  matrix_generator.py  search.py
src/proteus/web/: index.html
src/web/: changelog.html  index.html
src/web/static/: styles.css  translations.json
tasks/: buck_dialect_expansion_epic.md  buck_executable_rule_conversion_epic.md  buck_glossary_expansion_epic.md  buck_reference_data_integration_plan.md  orthographic_notes_citation_ready_plan.md  orthographic_notes_implementation_plan.md  phase2_rest_api_and_mcp_prototype_plan.md  phase3_scholarly_validation_hard_query_collection_plan.md  phase4_corpus_adapter_poc_plan.md
tasks/codex-reviews/: 2026-05-14-cycle1-orthography-notes.md  2026-05-14-cycle2-search-init.md  2026-05-14-cycle3-explainer.md  2026-05-15-cycle4-lsj.md
tests/: conftest.py  test_api_buck_reference.py  test_api_languages.py  test_api_main.py  test_api_request_id.py  test_api_search_meta.py  test_api_search_sources.py  test_api_verification.py  test_api_version.py  test_benchmark_search_latency.py  test_betacode.py  test_buck_annotations.py  test_buck_data_files.py  test_buck_loader.py  test_buck_service.py  test_build_lexicon.py  test_build_log_odds_matrix.py  test_core_ipa.py  test_core_language_independence.py  test_corpus_adapter_schema.py  test_corpus_adapters.py  test_data_files.py  test_debug_logging.py  test_distance.py  test_explainer.py  test_extract_epidoc_choices.py  test_hard_query_schema.py  test_helpers.py  test_i18n.py  test_ipa_converter.py  test_language_profiles.py  test_log_odds.py  test_lsj_extractor.py  test_matrix_generator.py  test_mcp_buck_tools.py  test_mcp_schema.py  test_mcp_search_tool.py  test_mcp_server_init.py  test_openapi.py  test_orthography_notes.py  (+27 more)
tests/_helpers/: fakes.py  score_stage_mock.py
tests/fixtures/: search_benchmark_queries.txt  search_benchmark_short_queries.txt
tests/fixtures/epidoc/: empty_elements.xml  malformed.xml  multiple_pairs.xml  nested_hi.xml  no_tm.xml  reversed_order.xml  simple.xml  tm_alternate_casing.xml
tools/: benchmark_search_latency.py  evaluate_hard_queries.py  validate_hard_queries.py  validate_matrix.py  validate_rule_files.py
(+19 files in other folders)
