[project]
name = "proteus"
version = "0.1.0"
description = "Ancient Greek phonological search engine using BLAST-like alignment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "lingpy>=2.6.13",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=7.0.0",
    "httpx>=0.28.0",
    "jsonschema>=4.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api", "src/phonology"]

[tool.hatch.build.targets.wheel.force-include]
"data/matrices" = "phonology/data/matrices"
"data/lexicon" = "phonology/data/lexicon"
"data/rules" = "phonology/data/rules"
"src/web/index.html" = "web/index.html"
"src/web/static" = "web/static"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -v"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]
