[project]
name = "proteus"
version = "0.2.0"
description = "Ancient Greek phonological search engine using BLAST-like alignment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "lingpy>=2.6.13",
    "packaging>=26.0",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=7.0.0",
    "httpx>=0.28.0",
    "jsonschema>=4.26.0",  # also in [extract]; needed here for test_data_files.py
    "types-PyYAML>=6.0.2",
]
extract = [
    "jsonschema>=4.26.0",  # also in [dev]; needed here for lsj_extractor validation
    "lxml>=4.9.1",
]

[build-system]
requires = [
    "hatchling",
    # Required when hatch_build.py generates the lexicon from scratch
    # (first build without a cached greek_lemmas.json).
    # See hatch_build.py -> build_lexicon.ensure_generated_lexicon().
    "pyyaml>=6.0.2",       # _load_pos_overrides() in lsj_extractor
    "jsonschema>=4.26.0",   # validate() in lsj_extractor
    "lxml>=4.9.1",          # iter_xml_entries() in lsj_extractor
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api", "src/phonology"]
exclude = ["data/languages/ancient_greek/lexicon/greek_lemmas.meta.json"]

[tool.hatch.build.targets.wheel.force-include]
"data/languages/ancient_greek/lexicon/greek_lemmas.json" = "phonology/data/languages/ancient_greek/lexicon/greek_lemmas.json"
"data/languages/ancient_greek/lexicon/greek_lemmas.schema.json" = "phonology/data/languages/ancient_greek/lexicon/greek_lemmas.schema.json"
"data/languages/ancient_greek/lexicon/pos_overrides.yaml" = "phonology/data/languages/ancient_greek/lexicon/pos_overrides.yaml"
"data/languages/ancient_greek/matrices" = "phonology/data/languages/ancient_greek/matrices"
"data/languages/ancient_greek/rules" = "phonology/data/languages/ancient_greek/rules"
"src/web/index.html" = "web/index.html"
"src/web/changelog.html" = "web/changelog.html"
"src/web/static" = "web/static"

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.sdist]
exclude = ["data/external/"]

[tool.hatch.build.targets.sdist.force-include]
"data/languages/ancient_greek/lexicon/greek_lemmas.json" = "data/languages/ancient_greek/lexicon/greek_lemmas.json"
"data/languages/ancient_greek/lexicon/greek_lemmas.meta.json" = "data/languages/ancient_greek/lexicon/greek_lemmas.meta.json"

[tool.hatch.build.targets.sdist.hooks.custom]
path = "hatch_build.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -v"
markers = [
    "internal_search_execution: tests that intentionally inspect internal search execution metadata",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]
